add screen shots

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="spacer"></div>
     <div class="footer">
         <p class="text-center"><em>Copyright &copy; <em id="copyright-year">2017</em> Jalal Hosseini</em></p>
-        <p>See <a href="https://github.com/artronics/jalal-hosseini">source code</a></p>
+        <p class="text-center"><a href="https://github.com/artronics/jalal-hosseini">source code</a></p>
     </div>
 </div>
 <script src="build/bundle.js"></script>
